OrderChart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
spec:
  replicas: 1

  selector:
    matchLabels:
      app: order-service

  template:
    metadata:
      labels:
        app: order-service

    spec:
      containers:
        - name: order-service

          image: "mousama/order-service:latest"

          ports:
          - name: http
            containerPort: 8888

          - name: grpc
            containerPort: 50051
