OrderChart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  type: ClusterIP

  selector:
    app: order-service

  ports:
  
    - name: http
      port: 8888
      targetPort: 8888
      
    - name: grpc
      port: 50051
      targetPort: 50051
